# oxiterm

./: .gitignore  Cargo.toml  IMPLEMENTAZIONI.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: chiavi.rs  lib.rs  locale.rs  model.rs  net.rs  seriale.rs  sftp.rs  ssh.rs  sshconfig.rs  storage.rs  telnet.rs  term.rs  vnc.rs
packaging/: PKGBUILD  oxiterm.desktop
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git_sync.rs  lib.rs  main.rs  vault.rs
src/components/: Anteprima.svelte  CodaTrasferimenti.svelte  EditorRemoto.svelte  FormConnessione.svelte  GestioneChiavi.svelte  Impostazioni.svelte  Info.svelte  MonitorServer.svelte  PaletteComandi.svelte  ReplayView.svelte  Sftp.svelte  Snippet.svelte  StrumentiRete.svelte  Terminale.svelte  Tunnel.svelte  VncView.svelte
src/lib/: aggiornamenti.js  api.js  id.js  impostazioni.svelte.js  notifiche.js  segnalibri.svelte.js  temi.js  trasferimenti.svelte.js  versione.js
