[package]
name = "oxiterm"
version = "0.5.3"
description = "Oxiterm - terminale SSH/SFTP a schede"
authors = ["Antonio Russo"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "oxiterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# La logica vera (SSH/SFTP) vive nel crate "core".
oxiterm-core = { path = "../core" }
# Per i canali e i Mutex asincroni usati nello stato condiviso.
tokio = { version = "1", features = ["sync", "time"] }
# Sincronizzazione cloud della rubrica via Git (binding di libgit2).
git2 = "0.20"
# Per inviare i frame VNC alla UI come stringhe compatte.
base64 = "0.22"
# Vault cifrato per le password salvate (master password).
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
